style.css
/* ... */
.va-middle { vertical-align: middle; }
.match-width { display: block; }
.match-height { height: 100%; }

.container {
  max-width: 780px;
}
.container-wide {
  max-width: 960px;
}
.clickable {
  cursor: pointer;
}


hr {
  margin: 0;
  padding: 0;
  border: 1px solid #ccc;
  border-width: 0 0 1px;
}

.color-twitter { color: #55acee; }
.color-linkedin { color: #0077b5; }


.sub-header {
  margin: 0 0 60px;
  text-align: center;
  line-height: 1;
}
.sub-header h1,
.sub-header h2,
.sub-header h3,
.sub-header h4,
.sub-header h5,
.sub-header h6 {
  font-size: inherit;
  font-style: inherit;
  color: inherit;
  line-height: inherit;
}
.sub-header > * > * {
  margin-right: 8px;
}
.sub-header > * > :last-child {
  margin-right: 0;
}
.sub-header strong,
.sub-header span,
.sub-header em {
  display: inline-block;
  line-height: inherit;
  white-space: nowrap;
}
.sub-header strong {
  font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif;
  font-weight: bold;
  font-size: 40px;
  text-transform: lowercase;
}
.small-header,
.sub-header span {
  font-size: 14px;
  font-style: normal;
  position: relative;
  font-family: Garamond, Times, Serif;
  text-transform: uppercase;
  letter-spacing: 2px;
  top: -.2em;
}
.small-header {
  display: block;
  top: auto;
  text-align: center;
  letter-spacing: 1px;
}
.em-header,
.sub-header em {
  font-style: italic;
  font-size: 50px;
  font-family: Garamond, Times, Serif;
  text-transform: lowercase;
}
.sub-header p {
  margin: 20px 0 0;
  font-size: 17px;
  font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif;
  text-transform: lowercase;
}



.header h1 {
  line-height: 1;
  padding-left: 30px;
}
.hometitle {
  padding-top: 40px;
}
#home .hometitle .sub-header {
  margin-bottom: 0;
}
#home .hometitle em {
  font-size: 100px;
}
#home .hometitle span {
  font-size: 19px;
  top: -.8em;
  margin: 0 3px 0 5px;
}
#home .hometitle p {
  margin-top: 10px;
  font-size: 17px;
}



.homethumbs {
  margin-top: 40px;
}
.thumb {
  display: table;
  height: 160px;
  padding: 4px;
  cursor: pointer;
}
.thumb > div {
  position: relative;
  display: table-cell;
  overflow: hidden;
  text-align: center;
  vertical-align: middle;
  height: 160px;
}
.thumbimage {
  position: absolute;
  top: -10px;
  right: -10px;
  left: -10px;
  bottom: -10px;
  -webkit-filter: blur(5px);
     -moz-filter: blur(5px);
          filter: blur(5px);
}
.thumb:hover .thumbimage {
  -webkit-filter: none;
     -moz-filter: none;
          filter: none;
}
.thumbwords {
  position: relative;
  font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif;
  font-size: 30px;
  color: #fff;
  /*text-shadow: 0 0 8px rgba(0, 0, 0, 0.35);*/
}



.headshot {
  display: inline-block;
  padding-right: 30px;
  text-align: center;
}
.headshot img {
  display: block;
  height: 50px;
  width: auto;
  opacity: .4;
  margin: 28px auto 0;
}
.headshot p {
  position: relative;
  opacity: 0;
  margin: 0;
  font-family: Garamond, Times, Serif;
  font-weight: normal;
  font-style: oblique;
  font-size: 18px;
  color: #333;
}
.headshot:hover * {
  opacity: 1;
}


/* ------------- Home Layers ------------- */

.elements {
  margin-top: 60px;
}
.elements ul strong {
  display: block;
  font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif;
  font-weight: bold;
  font-size: 28px;
  line-height: 1.2;
}
.elements ul p {
  margin: 0 0 15px 5px;
  font-size: 17px;
}
.elements ul li {
  position: relative;
  margin-left: 1.5em;
}
.elements ul li:before {
  content: '';
  position: absolute;
  top: 0.8em;
  left: -1.5em;
  display: block;
  width: 1em;
  height: 1em;
  border-radius: 50px;
  background-color: #666;
}
.elements-flow:before { background-color: #e373e3 !important; }
.elements-nav:before { background-color: #a5d877 !important; }
.elements-copy:before { background-color: #76dbfd !important; }
.elements-look:before { background-color: #ffd659 !important; }



.users-first {
  margin-top: 60px;
}
.users-first .sub-header {
  margin-bottom: 60px;
}
.users-first .devices > * {
  padding-left: 30px;
  padding-right: 30px;
  border: 2px solid #f1f1f1;
  border-width: 0 2px 0 0;
}
.users-first .devices > :last-child {
  border: none;
}
.users-first .icon {
  text-align: center;
  color: #e4e4e4;
  font-size: 45px;
}
.users-first h4 {
  margin-bottom: 20px;
  text-align: center;
  font-family: Garamond, Times, Serif;
  font-size: 14px;
  font-style: normal;
  text-transform: uppercase;
  letter-spacing: 2px;
}
.users-first img {
  display: block;
  margin: 0 auto;
}
.users-first h5 {
  display: table;
  width: 100%;
  height: 4.1em;
  margin-top: 5px;
  padding: 5px;
  background-color: #333;
  font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif;
  font-weight: bold;
  font-size: 15px;
  text-align: center;
  color: #fff;
}
.users-first h5 span {
  display: table-cell;
  vertical-align: middle;
}
.users-first .devices p {
  margin: 20px 0;
  font-family: 'Lato', Helvetica, Arial, Verdana, Sans-serif;
  font-size: 15px;

}
.users-first .devices em {
  font-family: Garamond, Times, Serif;
  font-style: italic;
  font-size: 20px;
  line-height: 1;
}


.process {
  margin-top: 60px;
}


/* ------------- About Page ------------- */

#about .hometitle strong {
  font-size: 45px;
}
#about .hometitle em {
  font-size: 60px;
}
#about .left-col {
  text-align: center;
  margin-bottom: 50px;
}
#about .small-header {
  margin: 40px 0 0;
}
#about .em-header {
  font-size: 35px;
}
#about .devices li {
  margin-right: 5px;
  font-size: 40px;
}
#about .devices li:last-child {
  margin-right: 0;
}
#about .logopile {
  display: block;
  margin: 20px auto;
}
#about .circle {
  max-height: 200px;
  margin-left: auto;
  margin-right: auto;
}
#about .email {
  color: inherit;
}
#about .social {
  margin: 20px 0;
  font-size: 25px;
}
.events,
.articles {
  padding: 15px;
}
#about .events .small-header,
#about .articles .small-header {
  margin: 0 0 20px;
}
/* ... */

